--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <div class="banner">
+        <h1>Let's Finish Your Internal Evil</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, obcaecati.</p>
+        <br>
+        <button class="btn">Donate Now</button>
+    </div>
+    </header>
 </body>
 </html>
