--- a/index.html
+++ b/index.html
@@ -15,5 +15,30 @@
         <button class="btn">Donate Now</button>
     </div>
     </header>
+    <main>
+        <section class="section2">
+            <div class="half-width">
+                <h1>Their lives depend on your donation</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur voluptatum magnam quasi enim debitis? Veniam, consectetur nihil. Repellat, doloremque impedit?</p>
+                <br>
+                <button class="btn">Explore More</button>
+            </div>
+            <div class="half-width">
+                <img src="images/social-change.jpg" alt="">
+            </div>
+        </section>
+        <section class="section2">
+            <div class="half-width">
+                <img src="images/orphan-gift.jpg" alt="">
+            </div>
+            <div class="half-width">
+                <h1>They need us to survive</h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus deserunt doloremque officia dolorum, alias eveniet!</p>
+                <br>
+                <button class="btn">Explore More</button>
+            </div>
+        </section>
+
+    </main>
 </body>
 </html>
